--- a/src/sass/components/_aside.scss
+++ b/src/sass/components/_aside.scss
@@ -11,7 +11,6 @@
 	display: flex;
 	flex-direction: column;
 	flex: 0 0 auto;
-
 	transition: width 0.2s ease-in-out;
 
 	&__profile {
@@ -197,6 +196,7 @@
 		z-index: 30;
 		bottom: 2.4rem;
 		right: 2.4rem;
+		transform: translate(calc(100% - 2.4rem - 5rem), calc(-2.4rem - 5rem));
 
 		@include desktop-small {
 			display: flex;
@@ -247,8 +247,13 @@
 		}
 
 		&.visible {
+			position: sticky;
+			top: 0;
+			bottom: 0;
+			left: 0;
 			display: flex;
 			width: clamp(75%, 24rem, 100%);
+			margin-right: calc(clamp(75%, 24rem, 100%) * -1);
 
 			.aside {
 				&__profile {
@@ -290,7 +295,7 @@
 				}
 
 				&:hover {
-					width: 80%;
+					width: clamp(75%, 24rem, 100%);
 
 					&__profile {
 						padding-right: 2rem;
